add Contact Us section on homepage

--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
     </div>
     <!-- End Collections -->
 
+    <!-- Contact Section -->
+    <div class="row contactSection text-center">
+      <div class="col-md-4 offset-md-7 my-auto">
+        <h3>Every love story is</h3>
+        <p>special, unique and beautiful.</p>
+        <h3>Let us capture</h3>
+        <p>your love story.</p>
+        <button type="button" class="btn btn-outline-light btn-lg btn-cu">Contact Us</button>
+      </div>
+    </div>
+    <!-- End Contact Section -->
+
+
     <!-- Boostrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
