--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- End Jumbotron -->
 
     <!-- Our Story -->
-    <div class="row ourStory">
+    <div class="row ourStory mb-5">
       <div class="col-md-6 offset-md-1 justify-content-end ourStoryText">
 
         <h1>OUR STORY</h1>
@@ -108,6 +108,37 @@
     </div>
     <!-- End Contact Section -->
 
+    <!-- Footer -->
+    <footer class="text-center">
+      <div class="row">
+        <div class="col-md-4">
+          <h4>CONTACT ETCHED IN OAK:</h4>
+          <br>
+          <p>Getting married? <a class="pinkLink" href="#">Reach out here!</a></p>
+          <p>Jenna@etchedinoak.com</p>
+        </div>
+        <div class="col-md-4">
+          <h4>HAVE A LOOK AROUND:</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Our Story</a></li>
+            <li><a href="#">Collections</a></li>
+            <li><a href="#">Heirlooms</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h4>FOLLOW ME ON INSTAGRAM:</h4>
+        </div>
+      </div>
+      <div class="row my-3">
+        <div class="col-md-12">
+          <p>&copy; 2019 Etched in Oak Photography LLC | East Brunswick, New Jersey Wedding Photographer | Serving Central NJ and beyond</p>
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer -->
 
     <!-- Boostrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
