begin to add responsive css

--- a/index.html
+++ b/index.html
@@ -69,27 +69,27 @@
         <p>Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
       </div>
 
-      <div class="col-md-4 offset-md-1 mt-auto">
+      <div class="col-md-4 offset-md-1 mt-auto d-md-block d-none">
         <img src="img/EIO-6.png" alt="Our Story Photo">
       </div>
     </div>
     <!-- End Our Story -->
 
     <!-- Collections -->
-    <div class="row">
-      <div class="col-md-3 offset-md-1">
+    <div class="row collections">
+      <div class="col-md-3 offset-md-1 col-sm-12">
         <h1>Collections</h1>
         <h2>Your love story begins here...</h2>
       </div>
-      <div class="col-md-2 offset-md-1 text-center">
+      <div class="col-md-2 offset-md-1 col-sm-4 text-center">
         <img class="img-fluid" src="img/wed-1.jpg" alt="Weddings">
         <h2 class="pt-3">Weddings</h2>
       </div>
-      <div class="col-md-2 text-center">
+      <div class="col-md-2 col-sm-4 text-center">
         <img class="img-fluid" src="img/EIO-8.jpg" alt="Weddings">
         <h2 class="pt-3">Maternity + Newborn</h2>
       </div>
-      <div class="col-md-2 text-center">
+      <div class="col-md-2 col-sm-4 text-center">
         <img class="img-fluid" src="img/EIO-7.jpg" alt="Weddings">
         <h2 class="pt-3">Family</h2>
       </div>
